@@ -1,6 +1,11 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.32 2004/04/01 15:49:38 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.33 2004/04/01 20:00:18 zhen Exp $
+
+  01 Apr 2004; John Davis <zhen@gentoo.org>
+  livecd/runscript/default-runscript.sh:
+  added in fix for the module.conf stuff courtesy of Benjamin Judas
+  <beejay@gentoo.org>
 
   01 Apr 2004; John Davis <zhen@gentoo.org> catalyst, files/catalyst.conf,
   files/x86-help.msg:
